Salesforce Check companies get refactored
