# src/routes/routes.js
@@ -6,9 +6,13 @@ const upload = multer({ storage: storage });
 
 const coreController = require('../controllers/core.controller');
 const csvEnrichmentController = require('../controllers/csvEnrichment.controller');
+const salesforceController = require('../controllers/salesforce.controller');
 
 //Core
 router.post('/core/error', coreController.sendErrorMessage);
+
+//Salesforce
+router.get('/salesforce/check_company', salesforceController.checkCompany);
 
 //CSV Enrichment
 router.post('/core/csv', upload.single('file'), csvEnrichmentController.enrichCsv);
